[package]
name = "peanut"
version = "0.1.0"
authors = ["Sahin Yort <thesayyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }